feat: implement comprehensive environment variable validation with Zod
- Replace class-validator with Zod for robust environment variable validation
- Add comprehensive validation schemas for both frontend and backend
- Implement type-safe environment variable access with full TypeScript support
- Add cross-field dependency validation (e.g., SMTP, AWS, OAuth configurations)
- Create environment-specific validation rules (development vs production)
- Add helpful error messages with examples and troubleshooting hints
- Implement fail-fast startup behavior - apps refuse to start with invalid config
- Add automatic type transformation (string to number, string to boolean)
- Create comprehensive .env.example files with detailed documentation
- Add validation script for CI/CD pipelines and local development
- Implement build-time validation for Next.js applications
- Add runtime environment validation with clear error reporting
- Support for optional variables with sensible defaults
- Add security validations for production environments
- Create comprehensive documentation and setup guides

--- a/package.json
+++ b/package.json
@@ -30,7 +30,12 @@
     "docker:build:backend": "cd services/backend && ./build.sh",
     "db:setup": "./scripts/db-setup.sh up",
     "db:reset": "./scripts/db-setup.sh reset",
-    "prisma:setup": "./scripts/setup-prisma.sh setup"
+    "prisma:setup": "./scripts/setup-prisma.sh setup",
+    "validate:env": "node scripts/validate-env.js",
+    "validate:env:backend": "node scripts/validate-env.js --backend",
+    "validate:env:frontend": "node scripts/validate-env.js --frontend",
+    "validate:env:all": "node scripts/validate-env.js --all",
+    "setup:env": "node scripts/validate-env.js --template"
   },
   "keywords": [
     "workspace",
@@ -45,6 +50,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.11.1",
   "devDependencies": {
+    "dotenv": "^16.4.7",
     "eslint": "^9.30.0",
     "prettier": "^3.4.2",
     "turbo": "^2.5.4",
