--- a/services/backend/.env.example
+++ b/services/backend/.env.example
@@ -1,14 +1,169 @@
-# Application Configuration
+# ==============================================
+# NEXUS BACKEND ENVIRONMENT CONFIGURATION
+# ==============================================
+# Copy this file to .env and fill in your values
+# Required variables are marked with [REQUIRED]
+
+# ==============================================
+# APPLICATION CONFIGURATION
+# ==============================================
 NODE_ENV=development
 PORT=3000
 API_PREFIX=api
-
-# CORS Configuration
 CORS_ORIGIN=*
 
-# Database Configuration
-DATABASE_URL=
+# Application Metadata
+APP_NAME=Nexus Backend
+APP_VERSION=1.0.0
+APP_URL=http://localhost:3000
 
-# JWT Configuration
-JWT_SECRET=your-secret-key-change-in-production
-JWT_EXPIRES_IN=3600
+# ==============================================
+# DATABASE CONFIGURATION [REQUIRED]
+# ==============================================
+# PostgreSQL connection string
+DATABASE_URL=postgresql://username:password@localhost:5432/nexus_db
+
+# ==============================================
+# JWT CONFIGURATION [REQUIRED]
+# ==============================================
+# Generate with: openssl rand -base64 64
+JWT_SECRET=your-super-secure-jwt-secret-key-at-least-32-characters-long
+JWT_REFRESH_SECRET=your-super-secure-refresh-secret-key-at-least-32-characters-long
+
+# JWT Token Expiry (format: 15m, 1h, 7d)
+JWT_ACCESS_EXPIRY=15m
+JWT_REFRESH_EXPIRY=7d
+
+# JWT Metadata
+JWT_ISSUER=nexus-backend
+JWT_AUDIENCE=nexus-app
+
+# ==============================================
+# SECURITY CONFIGURATION
+# ==============================================
+# Bcrypt salt rounds (10-15 recommended)
+BCRYPT_SALT_ROUNDS=12
+
+# Encryption key for sensitive data (optional)
+# ENCRYPTION_KEY=your-32-character-encryption-key
+
+# Session configuration (optional)
+# SESSION_SECRET=your-session-secret-at-least-32-characters
+# SESSION_MAX_AGE=86400000
+
+# ==============================================
+# EMAIL CONFIGURATION (Optional)
+# ==============================================
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
+# SMTP_SECURE=true
+# SMTP_FROM=noreply@nexus-workspace.com
+
+# SendGrid (Alternative to SMTP)
+# SENDGRID_API_KEY=your-sendgrid-api-key
+# SENDGRID_FROM_EMAIL=noreply@nexus-workspace.com
+
+# ==============================================
+# REDIS CONFIGURATION (Optional)
+# ==============================================
+# Redis URL (preferred)
+# REDIS_URL=redis://username:password@localhost:6379
+
+# Or individual Redis settings
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
+# REDIS_PASSWORD=your-redis-password
+# REDIS_DB=0
+
+# ==============================================
+# FILE UPLOAD CONFIGURATION
+# ==============================================
+MAX_FILE_SIZE=10485760
+UPLOAD_DEST=./uploads
+
+# ==============================================
+# RATE LIMITING CONFIGURATION
+# ==============================================
+RATE_LIMIT_TTL=60000
+RATE_LIMIT_MAX=100
+
+# ==============================================
+# LOGGING CONFIGURATION
+# ==============================================
+LOG_LEVEL=info
+
+# ==============================================
+# ERROR TRACKING (Sentry) - Optional
+# ==============================================
+# Get from: https://sentry.io/settings/[org]/projects/[project]/keys/
+# SENTRY_DSN=https://your-dsn@sentry.io/project-id
+# SENTRY_RELEASE=1.0.0
+# SENTRY_ORG=your-org
+# SENTRY_PROJECT=nexus-backend
+# SENTRY_AUTH_TOKEN=your-auth-token
+# SENTRY_DEBUG=false
+
+# ==============================================
+# FEATURE FLAGS
+# ==============================================
+ENABLE_SWAGGER=true
+ENABLE_METRICS=true
+ENABLE_HEALTH_CHECKS=true
+ENABLE_ERROR_TRACKING=true
+ENABLE_REQUEST_LOGGING=true
+
+# ==============================================
+# EXTERNAL SERVICE URLS
+# ==============================================
+FRONTEND_URL=http://localhost:3000
+
+# ==============================================
+# THIRD-PARTY API KEYS (Optional)
+# ==============================================
+# Stripe
+# STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
+# STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret
+# STRIPE_PUBLISHABLE_KEY=pk_test_your-publishable-key
+
+# AWS (Optional)
+# AWS_ACCESS_KEY_ID=your-access-key-id
+# AWS_SECRET_ACCESS_KEY=your-secret-access-key
+# AWS_REGION=us-west-2
+# AWS_S3_BUCKET=your-s3-bucket
+
+# OAuth (Optional)
+# GOOGLE_CLIENT_ID=your-google-client-id
+# GOOGLE_CLIENT_SECRET=your-google-client-secret
+# GITHUB_CLIENT_ID=your-github-client-id
+# GITHUB_CLIENT_SECRET=your-github-client-secret
+
+# ==============================================
+# MONITORING CONFIGURATION
+# ==============================================
+PROMETHEUS_METRICS_PATH=/metrics
+HEALTH_CHECK_TIMEOUT=5000
+
+# ==============================================
+# DEVELOPMENT CONFIGURATION
+# ==============================================
+ENABLE_DEBUG=false
+ENABLE_PROFILING=false
+
+# ==============================================
+# WEBHOOK CONFIGURATION
+# ==============================================
+WEBHOOK_SECRET=your-webhook-secret
+WEBHOOK_TIMEOUT=30000
+
+# ==============================================
+# CACHE CONFIGURATION
+# ==============================================
+CACHE_TTL=300
+
+# ==============================================
+# QUEUE CONFIGURATION (Optional)
+# ==============================================
+# QUEUE_REDIS_URL=redis://localhost:6379
+# QUEUE_CONCURRENCY=5
