feat: implement comprehensive E2E testing with Playwright
- Create dedicated E2E testing package with Playwright
- Implement authentication tests (login, registration, logout)
- Add complete user journey tests simulating real user flows
- Implement API testing for backend validation
- Add visual regression testing with screenshot comparison
- Implement mobile-specific tests for responsive design
- Create smoke tests for critical path validation
- Add Docker setup for isolated test environment
- Implement CI/CD pipeline with GitHub Actions
- Add comprehensive documentation and setup guides
- Configure multi-browser testing (Chrome, Firefox, Safari)
- Implement test categorization with tags (@smoke, @regression, etc.)
- Add performance testing for response times and load times
- Create global setup/teardown for test environment preparation

--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
   "scripts": {
     "build": "turbo build",
     "test": "turbo test",
-    "test:e2e": "turbo test:e2e",
+    "test:e2e": "cd tests/e2e && pnpm test",
+    "test:e2e:headed": "cd tests/e2e && pnpm test:headed",
+    "test:e2e:ui": "cd tests/e2e && pnpm test:ui",
+    "test:e2e:smoke": "cd tests/e2e && pnpm test:smoke",
+    "test:e2e:regression": "cd tests/e2e && pnpm test:regression",
+    "test:e2e:visual": "cd tests/e2e && pnpm test --grep @visual",
+    "test:e2e:mobile": "cd tests/e2e && pnpm test --grep @mobile",
+    "test:e2e:api": "cd tests/e2e && pnpm test:api",
+    "test:e2e:docker": "cd tests/e2e && pnpm test:docker",
+    "test:e2e:install": "cd tests/e2e && pnpm test:install",
     "test:coverage": "turbo test:coverage",
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
@@ -23,6 +32,7 @@
     "ci:setup": "pnpm install --frozen-lockfile",
     "ci:build": "pnpm build",
     "ci:test": "pnpm test",
+    "ci:test:e2e": "pnpm test:e2e:smoke",
     "ci:lint": "pnpm lint && pnpm format:check && pnpm type-check",
     "ci:audit": "pnpm audit",
     "docker:build": "./scripts/docker-build.sh",
@@ -44,7 +54,9 @@
     "nextjs",
     "nestjs",
     "prisma",
-    "docker"
+    "docker",
+    "e2e",
+    "playwright"
   ],
   "author": "Nexus Team",
   "license": "ISC",
