--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,29 +19,32 @@
     "clean": "rm -rf .next"
   },
   "dependencies": {
+    "@nexus/shared-types": "workspace:*",
+    "@nexus/shared-utils": "workspace:*",
+    "@nexus/ui": "workspace:*",
+    "@sentry/nextjs": "^9.34.0",
+    "@sentry/profiling-node": "^9.34.0",
+    "next": "15.3.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4",
-    "next-auth": "^4.24.5",
-    "@nexus/ui": "workspace:*",
-    "@nexus/shared-types": "workspace:*",
-    "@nexus/shared-utils": "workspace:*"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "@eslint/eslintrc": "^3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
-    "identity-obj-proxy": "^3.0.0"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
