feat: implement comprehensive design system with Storybook and Chromatic
- Create design token system with Style Dictionary for colors, typography, spacing, and motion
- Build accessible React component library with Button and Input components
- Implement comprehensive Storybook documentation with interactive examples
- Add Chromatic visual regression testing integration
- Create automated CI/CD pipeline for design system validation
- Include accessibility testing with Storybook test runner
- Add bundle size analysis and documentation checks
- Configure automated Storybook deployment to GitHub Pages
- Implement comprehensive test suite with Jest and Testing Library
- Add design token validation and component documentation requirements
- Create detailed README with usage examples and best practices
- Update CODEOWNERS for design system governance

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -117,3 +117,16 @@ TERMS.md @nexus-team/legal-team
 # Release & Deployment
 CHANGELOG.md @nexus-team/platform-team @nexus-team/product-team
 /scripts/deploy-*.sh @nexus-team/platform-team @nexus-team/devops-team @nexus-team/security-team
+
+# Design System & UI Components
+packages/ui/ @nexus-team/frontend-team @nexus-team/design-team
+packages/ui/src/components/ @nexus-team/frontend-team @nexus-team/design-team
+packages/ui/tokens/ @nexus-team/design-team @nexus-team/platform-team
+packages/ui/.storybook/ @nexus-team/frontend-team @nexus-team/design-team
+packages/ui/chromatic.config.json @nexus-team/frontend-team @nexus-team/qa-team
+.github/workflows/design-system-ci.yml @nexus-team/platform-team @nexus-team/frontend-team
+
+# Design System Documentation
+packages/ui/README.md @nexus-team/design-team @nexus-team/frontend-team
+packages/ui/**/*.stories.tsx @nexus-team/design-team @nexus-team/frontend-team
+packages/ui/**/*.mdx @nexus-team/design-team @nexus-team/frontend-team
