feat: implement comprehensive SRE principles with SLOs and Error Budgets
- Create SLO management system with TypeScript core and YAML configuration
- Define service-tier based SLOs for API, database, secret management, frontend, and design system
- Implement error budget calculation with burn rate alerting and budget exhaustion tracking
- Build Prometheus integration with automated recording rules and alerting rule generation
- Create comprehensive Grafana dashboard with SLO compliance, error budget status, and burn rate visualization
- Add automated SLO report generation in JSON, HTML, CSV, and YAML formats
- Implement GitHub Actions workflow for continuous SLO monitoring and budget violation detection
- Include CLI tools for SLO validation, budget calculation, and dashboard generation
- Create detailed documentation with best practices, integration examples, and troubleshooting guides
- Update CODEOWNERS for SRE governance and critical configuration protection
- Formalize trade-off between reliability and feature velocity through error budget policy

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -130,3 +130,16 @@ packages/ui/chromatic.config.json @nexus-team/frontend-team @nexus-team/qa-team
 packages/ui/README.md @nexus-team/design-team @nexus-team/frontend-team
 packages/ui/**/*.stories.tsx @nexus-team/design-team @nexus-team/frontend-team
 packages/ui/**/*.mdx @nexus-team/design-team @nexus-team/frontend-team
+
+# Site Reliability Engineering (SRE)
+packages/sre/ @nexus-team/sre-team @nexus-team/platform-team
+packages/sre/configs/ @nexus-team/sre-team @nexus-team/platform-team
+packages/sre/dashboards/ @nexus-team/sre-team @nexus-team/platform-team
+packages/sre/src/types/ @nexus-team/sre-team @nexus-team/platform-team
+packages/sre/src/core/ @nexus-team/sre-team @nexus-team/platform-team
+packages/sre/src/monitoring/ @nexus-team/sre-team @nexus-team/platform-team
+packages/sre/scripts/ @nexus-team/sre-team @nexus-team/platform-team
+.github/workflows/sre-monitoring.yml @nexus-team/sre-team @nexus-team/platform-team
+
+# SLO Configuration (Critical)
+packages/sre/configs/slo-definitions.yaml @nexus-team/sre-team @nexus-team/platform-team @nexus-team/security-team
