feat: implement comprehensive product analytics with PostHog and Mixpanel
- Create multi-provider analytics system with PostHog and Mixpanel integration
- Build comprehensive event tracking system with typed events for user, feature, navigation, engagement, conversion, error, and performance categories
- Implement React hooks and components for seamless analytics integration including useFeatureTracking, useButtonTracking, useFormTracking, and usePageTracking
- Add automated user behavior analysis with feature usage patterns, user segmentation, cohort analysis, and conversion funnel tracking
- Create privacy-first analytics with consent management, PII scrubbing, and GDPR compliance features
- Build automated insights generation with feature value analysis, user journey mapping, and actionable recommendations
- Implement comprehensive analytics monitoring workflow with daily reports, weekly insights, and monthly deep analysis
- Add specialized tracking for design system usage, secret management interactions, and API integration patterns
- Create detailed documentation with best practices, integration examples, and privacy guidelines
- Update CODEOWNERS for analytics governance and critical configuration protection
- Enable data-driven product decisions through comprehensive user behavior understanding

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -143,3 +143,15 @@ packages/sre/scripts/ @nexus-team/sre-team @nexus-team/platform-team
 
 # SLO Configuration (Critical)
 packages/sre/configs/slo-definitions.yaml @nexus-team/sre-team @nexus-team/platform-team @nexus-team/security-team
+
+# Product Analytics
+packages/analytics/ @nexus-team/product-team @nexus-team/frontend-team
+packages/analytics/src/core/ @nexus-team/product-team @nexus-team/platform-team
+packages/analytics/src/providers/ @nexus-team/product-team @nexus-team/platform-team
+packages/analytics/src/react/ @nexus-team/product-team @nexus-team/frontend-team
+packages/analytics/configs/ @nexus-team/product-team @nexus-team/platform-team
+packages/analytics/scripts/ @nexus-team/product-team @nexus-team/data-team
+.github/workflows/analytics-monitoring.yml @nexus-team/product-team @nexus-team/platform-team
+
+# Analytics Configuration (Critical)
+packages/analytics/configs/analytics-config.yaml @nexus-team/product-team @nexus-team/platform-team @nexus-team/data-team
