--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -155,3 +155,18 @@ packages/analytics/scripts/ @nexus-team/product-team @nexus-team/data-team
 
 # Analytics Configuration (Critical)
 packages/analytics/configs/analytics-config.yaml @nexus-team/product-team @nexus-team/platform-team @nexus-team/data-team
+
+# Incident Management & On-Call
+packages/incident-management/ @nexus-team/sre-team @nexus-team/platform-team
+packages/incident-management/src/core/ @nexus-team/sre-team @nexus-team/platform-team
+packages/incident-management/src/providers/ @nexus-team/sre-team @nexus-team/platform-team
+packages/incident-management/configs/ @nexus-team/sre-team @nexus-team/platform-team
+packages/incident-management/templates/ @nexus-team/sre-team @nexus-team/platform-team
+packages/incident-management/scripts/ @nexus-team/sre-team @nexus-team/platform-team
+.github/workflows/incident-management.yml @nexus-team/sre-team @nexus-team/platform-team
+
+# Incident Management Configuration (Critical)
+packages/incident-management/configs/incident-config.yaml @nexus-team/sre-team @nexus-team/platform-team @nexus-team/security-team
+
+# Post-Mortem Templates (Critical)
+packages/incident-management/templates/ @nexus-team/sre-team @nexus-team/platform-team @nexus-team/engineering-leads
